--- a/src/Containers/Dashboard/Dashboard.module.scss
+++ b/src/Containers/Dashboard/Dashboard.module.scss
@@ -23,6 +23,7 @@
     margin-bottom: 19px;
     margin-top: 19px;
     &__container {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
       justify-content: center;
